--- a/alfabitcoin/address_alfabitcoin - copia.html
+++ b/alfabitcoin/address_alfabitcoin - copia.html
@@ -117,10 +117,12 @@
                     text: 'Address',
                     maxPadding: 30
                 },
+                type: 'logarithmic',
             }, {
                 title: {
                     text: 'BTC price'
                 },
+                type: 'logarithmic',
                 opposite: false,
             }],
 
@@ -182,7 +184,7 @@
             },
 
             rangeSelector: {
-                selected: 4
+                selected: 5
             },
 
             credits: {
