Change alfa bitcoin

--- a/alfabitcoin/hodl_waves_alfabitcoin.html
+++ b/alfabitcoin/hodl_waves_alfabitcoin.html
@@ -169,7 +169,8 @@
                 color: 'rgba(94, 79, 162,0.8)',
                 data: data_hw_age_8y_,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -177,7 +178,8 @@
                 color: 'rgba(54, 130, 186, 0.8)',
                 data: data_hw_age_4y_8y,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -185,7 +187,8 @@
                 color: 'rgba(91, 182, 169, 0.8)',
                 data: data_hw_age_3y_4y,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -193,7 +196,8 @@
                 color: 'rgba(150, 213, 164, 0.8)',
                 data: data_hw_age_2y_3y,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -201,7 +205,8 @@
                 color: 'rgba(209, 236, 156, 0.8)',
                 data: data_hw_age_1y_2y,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -210,7 +215,8 @@
                 data: data_hw_age_6m_1y,
                 visible: false,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -219,7 +225,8 @@
                 data: data_hw_age_3m_6m,
                 visible: false,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -228,7 +235,8 @@
                 data: data_hw_age_1m_3m,
                 visible: false,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -237,7 +245,8 @@
                 data: data_hw_age_1w_1m,
                 visible: false,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -246,7 +255,8 @@
                 data: data_hw_age_1d_1w,
                 visible: false,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }, {
@@ -255,7 +265,8 @@
                 data: data_hw_age_0d_1d,
                 visible: false,
                 tooltip: {
-                    valueDecimals: 2
+                    valueDecimals: 2,
+                    valueSuffix: ' ({point.percentage:.0f}%)'
                 },
                 yAxis: 0
             }
