--- a/alfabitcoin/address_alfabitcoin.html
+++ b/alfabitcoin/address_alfabitcoin.html
@@ -69,6 +69,10 @@
                                 type: isLogarithmic ? 'linear' : 'logarithmic',
                                 minorTickInterval: isLogarithmic ? null : 'auto'
                             });
+                            chart.yAxis[0].update({
+                                type: isLogarithmic ? 'linear' : 'logarithmic',
+                                minorTickInterval: isLogarithmic ? null : 'auto'
+                            });
 
                             button.firstChild.style['background-image'] = `url(${iconURL})`;
 
@@ -114,12 +118,15 @@
 
             yAxis: [{
                 title: {
-                    text: 'Address'
+                    text: 'Address',
+                    maxPadding: 30
                 },
+                type: 'logarithmic',
             }, {
                 title: {
                     text: 'BTC price'
                 },
+                type: 'logarithmic',
                 opposite: false,
             }],
 
@@ -181,7 +188,7 @@
             },
 
             rangeSelector: {
-                selected: 4
+                selected: 5
             },
 
             credits: {
